--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   <main class="projects">
     <!-- Project Card -->
     <div class="card">
+      <img src="assets/screenshots/project1.webp" alt="Princewill Project screenshot" />
+      <h3>TechCrafters Website</h3>
+      <p>Short description of what the project does.</p>
+      <p class="tech">HTML • CSS • JavaScript</p>
+      <div class="links">
+        <a href="https://github.com/princewillnwabueze0714" target="_blank">GitHub</a>
+        <a href="https://princeprojectjcs.netlify.app/" target="_blank">Live Demo</a>
+      </div>
+    </div>
+    
+    <div class="card">
       <img src="assets/screenshots/project1.png" alt="Project screenshot" />
       <h3>Project Name</h3>
       <p>Short description of what the project does.</p>
